Update Apps Script URL

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
     // ║  PASTE YOUR GOOGLE APPS SCRIPT WEB APP URL BELOW                        ║
     // ║  (Deploy the Apps Script from google_apps_script.js, then paste URL)    ║
     // ╚═══════════════════════════════════════════════════════════════════════════╝
-    const APPS_SCRIPT_URL = "https://script.google.com/macros/s/AKfycbyB5b-raK5TB8jae94FinurfCCdMVMIiJquzkTTYnejocMLPj_GpnLl4Idor8-ccQ0Wsg/exec"; // e.g. "https://script.google.com/macros/s/AKfycb.../exec"
+    const APPS_SCRIPT_URL = "https://script.google.com/macros/s/AKfycbxomV9oBvd6S527zlbwm-ht_hiD15fTc7fi4IYtcCA0FOToy0krTEerrgXIIBhEpMr-jw/exec";
     const POLL_INTERVAL = 10000; // Refresh every 10s
 
     const SheetsAPI = {
